--- a/home/wiki/App/Import/English_Wikipedia.html
+++ b/home/wiki/App/Import/English_Wikipedia.html
@@ -102,7 +102,7 @@
     </h4>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         Find <code>en.wikipedia.org</code> in the list
