--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -454,7 +454,7 @@
         (add) Html: Embed file name / width / height in HTML.
       </li>
       <li>
-        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server">App/Xtn/Browser/HTTP_Server</a>
+        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">App/Xtn/Browser/HTTP_Server</a>
       </li>
       <li>
         (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language" class="xowa-visited">Options/Language</a>
@@ -1497,7 +1497,7 @@
         (add) Wikidata: Lua Wikibase support added. See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_34" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
       </li>
       <li>
-        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         (fix) Import: Import failed to "read from file" if wiki.unzip was present.
