--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -1008,7 +1008,7 @@
     </p>
     <ul>
       <li>
-        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
+        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
       </li>
       <li>
         File: Use thumb size when specified for videos, not original size (affects several video thumbnails showing with large size); EX:[[File:A.ogv|thumb]] -&gt; 220px x&gt; original_px. See: <a href="https://en.wikipedia.org/wiki/Edward_Snowden" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Edward_Snowden</a> <a href="https://en.wikipedia.org/wiki/Xinjiang" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Xinjiang</a> <a href="https://en.wikipedia.org/wiki/Alice_Brady" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Alice_Brady</a> [broken since:v2.8.2]
@@ -1037,7 +1037,7 @@
     </p>
     <ul>
       <li>
-        Javascript.Find: Allow search by backslash; EX:"C:\XOWA". See: <a href="http://xowa.org/home/wiki/App/Setup/Upgrading.html" id="xolnki_14" title="App/Setup/Upgrading">App/Setup/Upgrading</a>
+        Javascript.Find: Allow search by backslash; EX:"C:\XOWA". See: <a href="http://xowa.org/home/wiki/App/Setup/Upgrading.html" id="xolnki_14" title="App/Setup/Upgrading" class="xowa-visited">App/Setup/Upgrading</a>
       </li>
       <li>
         API.Wikimedia: Add builder command for downloading wiki meta data. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Site_meta.html" id="xolnki_15" title="Dev/Command-line/Site meta">Dev/Command-line/Site_meta</a>
@@ -2272,7 +2272,7 @@
         Wikidata: Use correct namespace / title when looking up wikidata wikis (affects wikidata language links / properties not working for titles in non-canonical namespaces); EX:"Author:A" -&gt; 102,A x&gt; 0,Author:A {detected by anonymous}. See: <a href="https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos" rel="nofollow" class="external free">https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos</a> [broken since:v2.4.2]
       </li>
       <li>
-        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online">Dashboard/Import/Online</a> [broken since:v2.4.3]
+        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> [broken since:v2.4.3]
       </li>
     </ul>
     <p>
@@ -2393,7 +2393,7 @@
         Language: Show messages for Wikidata codes (affects &lt;some-key&gt; showing up on Wikidata instead of "value"); EX:&lt;Wikibase-entity-item&gt; -&gt; "item" {detected by anonymous}. See: <a href="https://www.wikidata.org" rel="nofollow" class="external free">https://www.wikidata.org</a>
       </li>
       <li>
-        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
     </ul>
     <p>
@@ -2577,7 +2577,7 @@
     </p>
     <ul>
       <li>
-        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         File: Download file if not available for offline database users.
