--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -126,7 +126,7 @@
           2016-12-18
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -161,10 +161,10 @@
           2016-12-02
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-06
         </td>
         <td class='cell_center'>
-          Dump complete
+          Dump in progress
         </td>
         <td class='cell_center'>
           sqlite3
@@ -196,7 +196,7 @@
           2016-11-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -231,7 +231,7 @@
           2016-10-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -266,7 +266,7 @@
           2016-10-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-07
         </td>
         <td class='cell_center'>
           Dump complete
@@ -301,7 +301,7 @@
           2016-12-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -367,10 +367,10 @@
           n
         </td>
         <td class='cell_center'>
-          2016-12-02
+          2017-01-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -405,7 +405,7 @@
           2016-10-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -440,7 +440,7 @@
           2016-10-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -475,7 +475,7 @@
           2016-10-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -510,7 +510,7 @@
           2016-10-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -545,7 +545,7 @@
           2016-10-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-07
         </td>
         <td class='cell_center'>
           Dump complete
@@ -614,7 +614,7 @@
           1969-12-31
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -643,13 +643,13 @@
           ht.wikisource.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
           2015-10-02
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -671,6 +671,41 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("ht.wikisource.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          it.wikinews.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-12-31
+        </td>
+        <td class='cell_center'>
+          2015-08-06
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("it.wikinews.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("it.wikinews.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("it.wikinews.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -752,7 +787,7 @@
           2016-11-20
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-07
         </td>
         <td class='cell_center'>
           Dump complete
@@ -781,13 +816,13 @@
           simple.wikibooks.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
           2015-10-02
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -822,7 +857,7 @@
           2016-10-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -885,13 +920,13 @@
           simple.wikiquote.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
           2016-01-30
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -926,7 +961,7 @@
           2016-12-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -961,7 +996,7 @@
           2016-12-03
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -996,7 +1031,7 @@
           2016-11-01
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2015-08-07
         </td>
         <td class='cell_center'>
           Dump complete
