--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -38,13 +38,13 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/System_requirements.html" id="xolnki_3" title="App/Setup/System requirements">System requirements</a><br>
+              <a href="http://xowa.org/home/wiki/App/Setup/System_requirements.html" id="xolnki_3" title="App/Setup/System requirements" class="xowa-visited">System requirements</a><br>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_4" title="App/Setup/Installation">Installing</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_4" title="App/Setup/Installation" class="xowa-visited">Installing</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Upgrading.html" id="xolnki_5" title="App/Setup/Upgrading">Upgrading</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Upgrading.html" id="xolnki_5" title="App/Setup/Upgrading" class="xowa-visited">Upgrading</a>
             </li>
           </ul>
         </td>
@@ -54,7 +54,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Import_overview.html" id="xolnki_6" title="App/Import/Import overview">Import Overview</a><br>
+              <a href="http://xowa.org/home/wiki/App/Import/Import_overview.html" id="xolnki_6" title="App/Import/Import overview" class="xowa-visited">Import Overview</a><br>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia">Simple Wikipedia</a>
@@ -148,7 +148,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_21" title="App/Xtn/Browser/HTTP Server">HTTP Server</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_21" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">HTTP Server</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_22" title="App/Xtn/Browser/XOWA viewer">XOWA Viewer</a>
@@ -197,7 +197,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Config_files/Index.html" id="xolnki_28" title="Dev/Config files/Index">Config files</a>
+              <a href="http://xowa.org/home/wiki/Dev/Config_files/Index.html" id="xolnki_28" title="Dev/Config files/Index" class="xowa-visited">Config files</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Design/Language_files.html" id="xolnki_29" title="Dev/Design/Language files">Language files</a>
