--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -92,9 +92,6 @@
     </p>
     <ul>
       <li>
-        (Wiki) Publish 2016-12 Italian and Swahili wikis. Also, 2016-12 English Wikipedia
-      </li>
-      <li>
         (PC) Add new <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_3" title="Options">Options</a> system
       </li>
       <li>
@@ -154,7 +151,7 @@
         </dl>
       </dd>
       <dd>
-        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_7" title="Help/Contents">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
+        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_7" title="Help/Contents" class="xowa-visited">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
       </dd>
     </dl>
     <dl>
@@ -186,7 +183,7 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_12" title="Dashboard/Import/Online">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_12" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
       </dd>
     </dl>
     <h5>
@@ -370,7 +367,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_36" title="Dashboard/Import/Online">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_36" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 829 known Wikimedia Foundation wikis
@@ -410,7 +407,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_41" title="Help/Contents">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_41" title="Help/Contents" class="xowa-visited">Contents</a>
         </td>
         <td>
           View all help topics
