--- a/home/wiki/Options/HTML_databases.html
+++ b/home/wiki/Options/HTML_databases.html
@@ -28,6 +28,9 @@
           <option value='xowa.app.startup'>
             App - Startup
           </option>
+          <option value='xowa.app.update'>
+            App - Update
+          </option>
           <option value='xowa.gui.general'>
             Gui - General
           </option>
@@ -123,8 +126,8 @@
           <div id='xowa.wiki.hdumps.read_preferred__name' class='xocfg_itm_name'>
             Prefer HTML Databases for Read tab
           </div>
-          <div id='xowa.wiki.hdumps.read_preferred__undo' data-xocfg-type='bool' class='xocfg_itm_delete xocfg_itm_hide'>
-            <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.wiki.hdumps.read_preferred")' title="reset to &quot;n&quot;">&nbsp;</span>
+          <div id='xowa.wiki.hdumps.read_preferred__undo' data-xocfg-type='bool' class='xocfg_itm_delete'>
+            <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.wiki.hdumps.read_preferred")' title="reset to &quot;y&quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
             <input id="xowa.wiki.hdumps.read_preferred" data-xocfg-key="xowa.wiki.hdumps.read_preferred" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox">
