--- a/home/wiki/Options/Menus.html
+++ b/home/wiki/Options/Menus.html
@@ -28,6 +28,9 @@
           <option value='xowa.app.startup'>
             App - Startup
           </option>
+          <option value='xowa.app.update'>
+            App - Update
+          </option>
           <option value='xowa.gui.general'>
             Gui - General
           </option>
@@ -209,7 +212,6 @@
               add_btn_default('xowa.nav.help.xowa_blog');
               add_btn_default('xowa.nav.help.change_log');
               add_btn_default('xowa.nav.help.diagnostics');
-              add_btn_default('xowa.nav.cfg.menus');
               add_spr;
               add_grp_default('xowa.gui.menus.group.system_data') {
                 add_btn_default('xowa.nav.system_data.log_session');
@@ -219,6 +221,8 @@
               }
               add_spr;
               add_btn_default('xowa.nav.help.about');
+              add_spr;
+              add_btn_default('xowa.nav.help.xowa_update');
             }&quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
@@ -279,7 +283,6 @@ add_grp_default('xowa.gui.menus.group.help') {
   add_btn_default('xowa.nav.help.xowa_blog');
   add_btn_default('xowa.nav.help.change_log');
   add_btn_default('xowa.nav.help.diagnostics');
-  add_btn_default('xowa.nav.cfg.menus');
   add_spr;
   add_grp_default('xowa.gui.menus.group.system_data') {
     add_btn_default('xowa.nav.system_data.log_session');
@@ -289,6 +292,8 @@ add_grp_default('xowa.gui.menus.group.help') {
   }
   add_spr;
   add_btn_default('xowa.nav.help.about');
+  add_spr;
+  add_btn_default('xowa.nav.help.xowa_update');
 }
 </textarea>
           </div><input type='hidden' id='xowa.gui.menus.browser.source__key_box' value='xowa.gui.menus.browser.source'> <input type='hidden' id='xowa.gui.menus.browser.source__ctx_box' value='app'>
@@ -304,7 +309,7 @@ add_grp_default('xowa.gui.menus.group.help') {
               </li>
             </ul>
             <p>
-              For more information, see <a tabindex="-1" href="/wiki/App/UI/Menus" id="xolnki_2" title="App/UI/Menus">App/UI/Menus</a>
+              For more information, see <a tabindex="-1" href="/wiki/App/UI/Menus" id="xolnki_11" title="App/UI/Menus">App/UI/Menus</a>
             </p>
           </div>
         </div>
@@ -446,9 +451,10 @@ add_btn_default('xowa.gui.browser.tabs.close_undo');
               add_btn_default('xowa.nav.help.xowa_blog');
               add_btn_default('xowa.nav.help.change_log');
               add_btn_default('xowa.nav.help.diagnostics');
-              add_btn_default('xowa.nav.cfg.menus');
               add_spr;
               add_btn_default('xowa.nav.help.about');
+              add_spr;
+              add_btn_default('xowa.nav.help.xowa_update');
             }&quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
@@ -518,9 +524,10 @@ add_grp_default('xowa.gui.menus.group.help') {
   add_btn_default('xowa.nav.help.xowa_blog');
   add_btn_default('xowa.nav.help.change_log');
   add_btn_default('xowa.nav.help.diagnostics');
-  add_btn_default('xowa.nav.cfg.menus');
   add_spr;
   add_btn_default('xowa.nav.help.about');
+  add_spr;
+  add_btn_default('xowa.nav.help.xowa_update');
 }
 </textarea>
           </div><input type='hidden' id='xowa.gui.menus.html.basic.source__key_box' value='xowa.gui.menus.html.basic.source'> <input type='hidden' id='xowa.gui.menus.html.basic.source__ctx_box' value='app'>
