--- a/home/wiki/Options/Popups.html
+++ b/home/wiki/Options/Popups.html
@@ -28,6 +28,9 @@
           <option value='xowa.app.startup'>
             App - Startup
           </option>
+          <option value='xowa.app.update'>
+            App - Update
+          </option>
           <option value='xowa.gui.general'>
             Gui - General
           </option>
@@ -500,11 +503,11 @@
           <div id='xowa.addon.popups.window.show_delay__name' class='xocfg_itm_name'>
             Number of milliseconds before showing popup
           </div>
-          <div id='xowa.addon.popups.window.show_delay__undo' data-xocfg-type='int' class='xocfg_itm_delete xocfg_itm_hide'>
+          <div id='xowa.addon.popups.window.show_delay__undo' data-xocfg-type='int' class='xocfg_itm_delete'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.addon.popups.window.show_delay")' title="reset to &quot;600&quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
-            <input id="xowa.addon.popups.window.show_delay" data-xocfg-key="xowa.addon.popups.window.show_delay" data-xocfg-type="int" accesskey="d" class="xocfg_data__int" type="text" value="600">
+            <input id="xowa.addon.popups.window.show_delay" data-xocfg-key="xowa.addon.popups.window.show_delay" data-xocfg-type="int" accesskey="d" class="xocfg_data__int" type="text" value="1000">
           </div><input type='hidden' id='xowa.addon.popups.window.show_delay__key_box' value='xowa.addon.popups.window.show_delay'> <input type='hidden' id='xowa.addon.popups.window.show_delay__ctx_box' value='app'>
         </div>
         <div id='xowa.addon.popups.window.show_delay_help_div' class='xohelp_div'>
