--- a/home/wiki/Options/Scribunto.html
+++ b/home/wiki/Options/Scribunto.html
@@ -28,6 +28,9 @@
           <option value='xowa.app.startup'>
             App - Startup
           </option>
+          <option value='xowa.app.update'>
+            App - Update
+          </option>
           <option value='xowa.gui.general'>
             Gui - General
           </option>
@@ -187,7 +190,7 @@
                 <b>executable permissions</b>: Linux / Mac OS X users may need to grant execute permission to the Lua binary. To ensure proper setup, please do the following: 
                 <ul>
                   <li>
-                    Open <a tabindex="-1" href="/wiki/Diagnostics/Scribunto/All" id="xolnki_30" title="Diagnostics/Scribunto/All">Diagnostics/Scribunto/All</a>
+                    Open <a tabindex="-1" href="/wiki/Diagnostics/Scribunto/All" id="xolnki_30" title="Diagnostics/Scribunto/All" class="xowa-visited">Diagnostics/Scribunto/All</a>
                   </li>
                   <li>
                     If the page fails, then see <a tabindex="-1" href="/wiki/App/Xtn/Mediawiki/Scribunto#Permissions" id="xolnki_31" title="App/Xtn/Mediawiki/Scribunto">App/Xtn/Mediawiki/Scribunto#Permissions</a>
