--- a/home/wiki/App/Setup/Update/Manual.html
+++ b/home/wiki/App/Setup/Update/Manual.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>App/Setup/Upgrading - XOWA</title>
+  <title>App/Setup/Update/Manual - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,7 +11,7 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>App/Setup/Upgrading</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>App/Setup/Update/Manual</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
