--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -4026,7 +4026,7 @@
         Math: Note that MikTeX may fail to update images dynamically for first page {detected by William}.
       </li>
       <li>
-        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents">Help/Contents</a>
+        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents" class="xowa-visited">Help/Contents</a>
       </li>
     </ul>
     <p>
@@ -4220,7 +4220,7 @@
     </p>
     <ul>
       <li>
-        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Messages: Add "Contatti" message for contactpage in itwiki sidebar. See: <a href="https://it.wikipedia.org" rel="nofollow" class="external free">https://it.wikipedia.org</a>
@@ -4391,7 +4391,7 @@
         Wikisource.Page: Support onlysection; EX:&lt;pages onlysection="a"/&gt;.
       </li>
       <li>
-        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         Gui.Url_bar: Open articles with same name as language code; EX:war -&gt; current_wiki/wiki/war, not war.wikipedia.org.
