--- a/home/wiki/Options/Window.html
+++ b/home/wiki/Options/Window.html
@@ -28,6 +28,9 @@
           <option value='xowa.app.startup'>
             App - Startup
           </option>
+          <option value='xowa.app.update'>
+            App - Update
+          </option>
           <option value='xowa.gui.general' selected='selected'>
             Gui - General
           </option>
