--- a/home/wiki/Wiki_setup/Spanish_wikis.html
+++ b/home/wiki/Wiki_setup/Spanish_wikis.html
@@ -388,7 +388,7 @@
     </h3>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_4" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Go to <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_4" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         Find your wiki in the list
