--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -854,7 +854,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-10-01
+          2016-12-01
         </td>
         <td class='cell_center'>
           2015-08-06
@@ -879,6 +879,40 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          simple.wikipedia_cur.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-10-01
+        </td>
+        <td class='cell_center'>
+        </td>
+        <td class='cell_center'>
+          &lt;&lt;NULL&gt;&gt;
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("simple.wikipedia_cur.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("simple.wikipedia_cur.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple.wikipedia_cur.org")'>Search</button>
         </td>
       </tr>
       <tr>
