--- a/home/wiki/Wiki_setup/Simple_wikis.html
+++ b/home/wiki/Wiki_setup/Simple_wikis.html
@@ -101,10 +101,10 @@
               <a href="#simple.wikipedia.org"><span class="tocnumber">4.1</span> <span class="toctext">simple.wikipedia.org</span></a> 
               <ul>
                 <li class="toclevel-3 tocsection-12">
-                  <a href="#simple.wikipedia.org_Articles_.282016-06.29"><span class="tocnumber">4.1.1</span> <span class="toctext">simple.wikipedia.org Articles (2016-06)</span></a>
+                  <a href="#simple.wikipedia.org_Articles_.282017-01.29"><span class="tocnumber">4.1.1</span> <span class="toctext">simple.wikipedia.org Articles (2017-01)</span></a>
                 </li>
                 <li class="toclevel-3 tocsection-13">
-                  <a href="#simple.wikipedia.org_Images_.282016-06.29"><span class="tocnumber">4.1.2</span> <span class="toctext">simple.wikipedia.org Images (2016-06)</span></a>
+                  <a href="#simple.wikipedia.org_Images_.282017-01.29"><span class="tocnumber">4.1.2</span> <span class="toctext">simple.wikipedia.org Images (2017-01)</span></a>
                 </li>
               </ul>
             </li>
@@ -133,7 +133,7 @@
       <dd>
         <dl>
           <dd>
-            Simple Wikipedia - Articles (2016-06) [420.31 MB]
+            Simple English Wikipedia - Articles (2017-01) [417.93 MB]
           </dd>
         </dl>
       </dd>
@@ -142,7 +142,7 @@
       <dd>
         <dl>
           <dd>
-            Simple Wikipedia - Images (2016-06) [1.99 GB]
+            Simple English Wikipedia - Images (2017-01) [2.9 GB]
           </dd>
         </dl>
       </dd>
@@ -219,27 +219,77 @@
       <span class="mw-headline" id="simple.wikipedia.org">simple.wikipedia.org</span>
     </h3>
     <h4>
-      <span class="mw-headline" id="simple.wikipedia.org_Articles_.282016-06.29">simple.wikipedia.org Articles (2016-06)</span>
+      <span class="mw-headline" id="simple.wikipedia.org_Articles_.282017-01.29">simple.wikipedia.org Articles (2017-01)</span>
     </h4>
     <div style="margin-left: 2em">
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_core.zip</a>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_core.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_html.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_html.zip</a>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.search.core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.search.core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.link_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.link_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.000.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.000.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.004.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.004.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.014.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.014.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.008.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.008.zip</a>
         </li>
       </ul>
     </div>
     <h4>
-      <span class="mw-headline" id="simple.wikipedia.org_Images_.282016-06.29">simple.wikipedia.org Images (2016-06)</span>
+      <span class="mw-headline" id="simple.wikipedia.org_Images_.282017-01.29">simple.wikipedia.org Images (2017-01)</span>
     </h4>
     <div style="margin-left: 2em">
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_file.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_file.zip</a>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_core.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.002.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.002.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.004_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.004_db.001.zip</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.014_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.014_db.001.zip</a>
         </li>
       </ul>
     </div>
@@ -247,9 +297,19 @@
       <span class="mw-headline" id="All_links">All links</span>
     </h3>
 <pre style='height: 10pc; overflow-y: scroll;'>
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_core.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_html.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2016-06_file.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_core.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.search.core.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.000.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.004.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.014.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.008.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.core.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.link_db.001.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_core.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.001.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.002.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.004_db.001.zip
+http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.014_db.001.zip
 
 </pre>
   
